[Problem7] 하나의 친구 관계를 받아 친구 목록(map)에 친구를 추가하는 기능